--- a/VipeBus/NewCity.xaml
+++ b/VipeBus/NewCity.xaml
@@ -11,12 +11,16 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Label Content="Город:" VerticalAlignment="Center" Height="64"/>
         <TextBox x:Name="cityTextBox" Grid.Row="0" Margin="5" VerticalAlignment="Center"/>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+        <Label Content="Регион:" VerticalAlignment="Top" Height="64" Margin="0,41,0,0" Grid.RowSpan="3"/>
+        <TextBox x:Name="regionTextBox" Grid.Row="1" Margin="5" VerticalAlignment="Center"/>
+
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
             <Button Content="Сохранить" Width="80" Height="25" Click="SaveButton_Click" Margin="0,0,10,0"/>
             <Button Content="Выйти" Width="80" Height="25" Click="CancelButton_Click"/>
         </StackPanel>
