--- a/VipeBus/CityWindow.xaml
+++ b/VipeBus/CityWindow.xaml
@@ -22,7 +22,15 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Город" Binding="{Binding Name}" Width="*"/>
                 <DataGridTextColumn Header="Регион" Binding="{Binding Region}" Width="*"/>
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Удалить" Click="DeleteButton_Click"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
+
         </DataGrid>
 
         <Button Content="Добавить город" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Button_Click"/>
