--- a/VipeBus/Route.xaml
+++ b/VipeBus/Route.xaml
@@ -23,6 +23,13 @@
                 <DataGridTextColumn Header="Куда" Binding="{Binding DestinationPoint.Name}" Width="*"/>
                 <DataGridTextColumn Header="Время отбытия" Binding="{Binding DepartureTime}" Width="*"/>
                 <DataGridTextColumn Header="Время прибытия" Binding="{Binding DestinationTime}" Width="*"/>
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Удалить" Click="DeleteButton_Click"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="Добавить маршрут" x:Name="NewRouteButton" HorizontalAlignment="Left" Margin="34,177,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="NewRouteButton_Click"/>
