--- a/VipeBus/NewRoute.xaml
+++ b/VipeBus/NewRoute.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="NewRoute" Height="300" Width="300">
+        Title="NewRoute" Height="300" Width="300" MinHeight="300" MinWidth="300">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
