--- a/VipeBus/MainWindow.xaml
+++ b/VipeBus/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="MainWindow" Height="830" Width="1280" MinHeight="830" MinWidth="1280">
+        Title="MainWindow" Height="600" Width="900" MinHeight="600" MinWidth="900">
     <Grid>
         <Rectangle Width="432" Height="370" Fill="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        
+        <!-- Добавляем текстбоксы внутри прямоугольника -->
         <TextBox x:Name="UserLog" Width="200" Height="30" Margin="542,354,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <TextBox x:Name="UserPas" Width="200" Height="30" Margin="542,407,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
 
-        
+        <!-- Добавляем кнопку внутри прямоугольника -->
         <Button Content="Войти" Width="196" Height="54" Margin="544,493,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Click="LoginButton_Click" />
         <Label Content="Логин" HorizontalAlignment="Left" Margin="542,328,0,0" VerticalAlignment="Top"/>
         <Label Content="Пароль" HorizontalAlignment="Left" Margin="542,384,0,0" VerticalAlignment="Top"/>
