--- a/VipeBus/NewRoute.xaml
+++ b/VipeBus/NewRoute.xaml
@@ -1,32 +1,40 @@
 ﻿<Window x:Class="VipeBus.NewRoute"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="NewRoute" Height="300" Width="300" MinHeight="300" MinWidth="300">
-    <Grid Margin="10">
+        Title="Новый маршрут" Height="300" Width="300" MinHeight="200" MinWidth="200">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-        <ComboBox x:Name="FromComboBox" DisplayMemberPath="Name" Grid.Row="0" Margin="5" VerticalAlignment="Center" />
-        <ComboBox x:Name="toComboBox" DisplayMemberPath="Name" Grid.Row="1" Margin="5" VerticalAlignment="Center"/>
-        <DatePicker x:Name="departureDatePicker" Grid.Row="2" Margin="5" VerticalAlignment="Center"/>
-        <xctk:TimePicker x:Name="departureTimePicker" Grid.Row="3" Margin="5" VerticalAlignment="Center"/>
-        <DatePicker x:Name="arrivalDatePicker" Grid.Row="4" Margin="5" VerticalAlignment="Center"/>
-        <xctk:TimePicker x:Name="arrivalTimePicker" Grid.Row="5" Margin="5" VerticalAlignment="Center"/>
+        <Label Grid.Row="0" Grid.Column="0">Пункт отправления</Label>
+        <ComboBox x:Name="FromComboBox" DisplayMemberPath="Name" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" />
+        <Label Grid.Row="1" Grid.Column="0">Пункт назначения</Label>
+        <ComboBox x:Name="toComboBox" DisplayMemberPath="Name" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"/>
+        <Label Grid.Row="2" Grid.Column="0">Дата отправления</Label>
+        <DatePicker x:Name="departureDatePicker" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"/>
+        <Label Grid.Row="3" Grid.Column="0">Время отправления</Label>
+        <xctk:TimePicker x:Name="departureTimePicker" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"/>
+        <Label Grid.Row="4" Grid.Column="0">Дата прибытия</Label>
+        <DatePicker x:Name="arrivalDatePicker" Grid.Row="4" Grid.Column="1" VerticalAlignment="Center"/>
+        <Label Grid.Row="5" Grid.Column="0">Время прибытия</Label>
+        <xctk:TimePicker x:Name="arrivalTimePicker" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center"/>
+        <Label Grid.Row="6" Grid.Column="0">Водитель</Label>
+        <ComboBox x:Name="DriverComboBox" DisplayMemberPath="Name" Grid.Row="6" Grid.Column="1" VerticalAlignment="Center"/>
 
-        <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Сохранить" Width="80" Height="25" Click="SaveButton_Click"/>
-            <Button Content="Отмена" Width="80" Height="25" Click="CancelButton_Click"/>
-        </StackPanel>
+        <Button Content="Сохранить" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="SaveButton_Click"/>
+        <Button Content="Отмена" Grid.Row="7" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Click="CancelButton_Click"/>
     </Grid>
 </Window>
