--- a/VipeBus/RouteWindow.xaml
+++ b/VipeBus/RouteWindow.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="Route" Height="830" Width="1280">
+        Title="Маршруты следования" Height="830" Width="1280">
     <Grid>
         <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
             <Label.RenderTransform>
@@ -23,6 +22,7 @@
                 <DataGridTextColumn Header="Куда" Binding="{Binding DestinationPoint.Name}" Width="*"/>
                 <DataGridTextColumn Header="Время отбытия" Binding="{Binding DepartureTime}" Width="*"/>
                 <DataGridTextColumn Header="Время прибытия" Binding="{Binding DestinationTime}" Width="*"/>
+                <DataGridTextColumn Header="Водитель" Binding="{Binding Driver.Name}" Width="*"/>
                 <DataGridTemplateColumn Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
