--- a/VipeBus/NewTripWindow.xaml
+++ b/VipeBus/NewTripWindow.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="NewTripWindow" Height="450" Width="450" MinHeight="400" MinWidth="350">
+        Title="NewTripWindow" Height="450" Width="450" MinHeight="400" MinWidth="350" MaxHeight="700" MaxWidth="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
