--- a/VipeBus/BusWindow.xaml
+++ b/VipeBus/BusWindow.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="VipeBus.CityWindow"
+﻿<Window x:Class="VipeBus.BusWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="Города" Height="830" Width="1280" MinHeight="500" MinWidth="800">
+        Title="Автобусы" Height="450" Width="800">
     <Grid>
         <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
             <Label.RenderTransform>
@@ -18,23 +17,21 @@
             </Label.RenderTransform>
         </Label>
 
-        <DataGrid x:Name="cityDataGrid" AutoGenerateColumns="False" Margin="316,39,44,61">
+        <DataGrid x:Name="BusDataGrid" AutoGenerateColumns="False" Margin="316,39,44,61">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Город" Binding="{Binding Name}" Width="*"/>
-                <DataGridTextColumn Header="Регион" Binding="{Binding Region}" Width="*"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding Name}" Width="*"/>
+                <DataGridTextColumn Header="Номер" Binding="{Binding Number}" Width="*"/>
                 <DataGridTemplateColumn Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Content="Удалить" Click="DeleteButton_Click"/>
+                            <Button Name="DeleteBusButton"  Content="Удалить" Click="DeleteBusButton_OnClick"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
-
         </DataGrid>
 
-        <Button Content="Добавить город" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Button_Click"/>
-        <Button Content="Главная" HorizontalAlignment="Left" Margin="34,139,0,0" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="Button_Click_1"/>
+        <Button Name="AddBusButton" Content="Добавить автобус" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="AddBusButton_OnClick"/>
+        <Button Name="BackButton" Content="Главная" HorizontalAlignment="Left" Margin="34,139,0,0" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="BackButton_OnClick"/>
     </Grid>
 </Window>
-
