--- a/VipeBus/MainWindow.xaml
+++ b/VipeBus/MainWindow.xaml
@@ -9,14 +9,14 @@
     <Grid>
         <Rectangle Width="432" Height="370" Fill="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <!-- Добавляем текстбоксы внутри прямоугольника -->
-        <TextBox x:Name="UserLog" Width="200" Height="30" Margin="542,354,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <TextBox x:Name="UserPas" Width="200" Height="30" Margin="542,407,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <TextBox x:Name="UserLog" Height="30" Margin="371,0,371,0" VerticalAlignment="Center" />
+        <TextBox x:Name="UserPas" Width="158" Height="30" Margin="0,354,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" />
 
         <!-- Добавляем кнопку внутри прямоугольника -->
-        <Button Content="Войти" Width="196" Height="54" Margin="544,493,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Click="LoginButton_Click" />
-        <Label Content="Логин" HorizontalAlignment="Left" Margin="542,328,0,0" VerticalAlignment="Top"/>
-        <Label Content="Пароль" HorizontalAlignment="Left" Margin="542,384,0,0" VerticalAlignment="Top"/>
-        <Label Content="Вход" HorizontalAlignment="Left" Margin="596,248,0,0" VerticalAlignment="Top" Height="54" Width="92" FontSize="36"/>
+        <Button Content="Войти" Width="196" Height="54" Margin="0,408,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Click="LoginButton_Click" />
+        <Label Content="Логин" HorizontalAlignment="Center" Margin="0,246,0,0" VerticalAlignment="Top"/>
+        <Label Content="Пароль" HorizontalAlignment="Center" Margin="0,328,0,0" VerticalAlignment="Top"/>
+        <Label Content="Вход" HorizontalAlignment="Center" Margin="0,164,0,0" VerticalAlignment="Top" Height="54" Width="92" FontSize="36"/>
 
     </Grid>
 </Window>
