--- a/VipeBus/NewTripWindow.xaml
+++ b/VipeBus/NewTripWindow.xaml
@@ -18,7 +18,7 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Row="0">Наименование</Label>
-        <TextBox Grid.Row="1" Name="TripNameTextBox"></TextBox>
+        <TextBox Grid.Row="1" MaxLength="20" Name="TripNameTextBox"></TextBox>
         <Label Grid.Row="2">Автобус</Label>
         <ComboBox Grid.Row="3" Name="BusComboBox" DisplayMemberPath="Name"></ComboBox>
         <Label Grid.Row="4">Клиент</Label>
