--- a/VipeBus/BusWindow.xaml
+++ b/VipeBus/BusWindow.xaml
@@ -69,10 +69,10 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="85"></RowDefinition>
-                <RowDefinition Height="45"></RowDefinition>
+                <RowDefinition Height="60"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Label Content="Автобусы" HorizontalAlignment="Left" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="83">
+            <Label Margin="10 0 0 0" Content="Автобусы" HorizontalAlignment="Left" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="83">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -83,7 +83,7 @@
                 </Label.RenderTransform>
             </Label>
 
-        <DataGrid x:Name="BusDataGrid" AutoGenerateColumns="False" Margin="316,39,44,61">
+        <DataGrid Grid.Column="1" Grid.RowSpan="3" x:Name="BusDataGrid" AutoGenerateColumns="False" Margin="30 30 30 30">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Название" Binding="{Binding Name}" Width="*"/>
                 <DataGridTextColumn Header="Номер" Binding="{Binding Number}" Width="*"/>
@@ -98,7 +98,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-            <Button Grid.Row="1" Style="{DynamicResource ButtonStyle1}" Name="AddBusButton" Content="Добавить автобус" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="AddBusButton_OnClick" BorderThickness="1,1,1,1"/>
-            <Button Grid.Row="2" Style="{DynamicResource ButtonStyle1}" Name="BackButton" Content="Главная" HorizontalAlignment="Left" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="BackButton_OnClick"/>
+            <Button Grid.Row="1" Margin="10 10 0 0" Style="{DynamicResource ButtonStyle1}" Name="AddBusButton" Content="Добавить автобус" HorizontalAlignment="Left" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="AddBusButton_OnClick" BorderThickness="1,1,1,1"/>
+            <Button Grid.Row="2" Margin="10 10 0 0" Style="{DynamicResource ButtonStyle1}" Name="BackButton" Content="Главная" HorizontalAlignment="Left" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="BackButton_OnClick"/>
         </Grid>
 </Window>
