--- a/VipeBus/NewTripWindow.xaml
+++ b/VipeBus/NewTripWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="NewTripWindow" Height="450" Width="450" MinHeight="400" MinWidth="350" MaxHeight="700" MaxWidth="600">
+        Title="Новая поездка" Height="450" Width="450" MinHeight="400" MinWidth="350" MaxHeight="700" MaxWidth="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
