--- a/VipeBus/CityWindow.xaml
+++ b/VipeBus/CityWindow.xaml
@@ -5,9 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="Города" Height="830" Width="1280" MinHeight="600" MinWidth="900">
+        Title="Города" Height="830" Width="1280" MinHeight="600" MinWidth="900" WindowState="Maximized">
     <Grid>
-        <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="85"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Label Margin="10 0 0 0" Content="Города" HorizontalAlignment="Left" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="83">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -18,7 +27,7 @@
             </Label.RenderTransform>
         </Label>
 
-        <DataGrid x:Name="cityDataGrid" AutoGenerateColumns="False" Margin="316,39,44,61">
+        <DataGrid Grid.Column="1" Grid.RowSpan="3" x:Name="cityDataGrid" AutoGenerateColumns="False" Margin="30 30 30 30">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Город" Binding="{Binding Name}" Width="*"/>
                 <DataGridTextColumn Header="Регион" Binding="{Binding Region}" Width="*"/>
@@ -33,8 +42,8 @@
 
         </DataGrid>
 
-        <Button Content="Добавить город" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Button_Click"/>
-        <Button Content="Главная" HorizontalAlignment="Left" Margin="34,139,0,0" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="Button_Click_1"/>
+        <Button Grid.Row="1" Style="{DynamicResource ButtonStyleGlobal}" Content="Добавить город" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="Button_Click"/>
+        <Button Grid.Row="2" Style="{DynamicResource ButtonStyleGlobal}" Content="Главная" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="Button_Click_1"/>
     </Grid>
 </Window>
 
