--- a/VipeBus/DriverWindow.xaml
+++ b/VipeBus/DriverWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Водители" Height="830" Width="1280" MinHeight="500" MinWidth="800">
+        Title="Driver" Height="830" Width="1280" MinHeight="500" MinWidth="800">
     <Grid>
         <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
             <Label.RenderTransform>
