--- a/VipeBus/BusWindow.xaml
+++ b/VipeBus/BusWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Автобусы" Height="450" Width="800" MinHeight="600" MinWidth="900" WindowState="Maximized">
+        Title="Автобусы" MinHeight="600" MinWidth="900" WindowState="Maximized">
     <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition Width="255"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
