--- a/VipeBus/CityWindow.xaml
+++ b/VipeBus/CityWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VipeBus"
         mc:Ignorable="d"
-        Title="Города" Height="830" Width="1280" MinHeight="600" MinWidth="900" WindowState="Maximized">
+        Title="Города" MinHeight="600" MinWidth="900" WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"></ColumnDefinition>
+            <ColumnDefinition Width="255"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -42,8 +42,8 @@
 
         </DataGrid>
 
-        <Button Grid.Row="1" Style="{DynamicResource ButtonStyleGlobal}" Content="Добавить город" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="Button_Click"/>
-        <Button Grid.Row="2" Style="{DynamicResource ButtonStyleGlobal}" Content="Главная" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="Button_Click_1"/>
+        <Button Grid.Row="1" Style="{DynamicResource ButtonStyleGlobal}" Content="Добавить город" Width="240" Height="45" FontSize="16" Click="Button_Click"/>
+        <Button Grid.Row="2" Style="{DynamicResource ButtonStyleGlobal}" Content="Главная" VerticalAlignment="Top" Width="240" Height="45" FontSize="16" Click="Button_Click_1"/>
     </Grid>
 </Window>
 
