--- a/VipeBus/DriverWindow.xaml
+++ b/VipeBus/DriverWindow.xaml
@@ -4,9 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Driver" Height="830" Width="1280" MinHeight="500" MinWidth="800">
+        Title="Driver" Height="830" Width="1280" MinHeight="500" MinWidth="800" WindowState="Maximized">
     <Grid>
-        <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="255"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="85"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Label Margin="10 0 0 0" Content="Водители" HorizontalAlignment="Left" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="83">
             <Label.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -16,7 +25,7 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <DataGrid x:Name="driverDataGrid" AutoGenerateColumns="False" Margin="316,39,44,61">
+        <DataGrid Grid.Column="1" Grid.RowSpan="3" x:Name="driverDataGrid" AutoGenerateColumns="False" Margin="30 30 30 30">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}" Width="*"/>
                 <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}" Width="*"/>
@@ -31,7 +40,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Добавить водителя" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="AddDriver_Click"/>
-        <Button Content="Главная" HorizontalAlignment="Left" Margin="34,139,0,0" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="Back_Click"/>
+        <Button Content="Добавить водителя" HorizontalAlignment="Left" Margin="34,83,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Button_Click_1"/>
+        <Button Content="Главная" HorizontalAlignment="Left" Margin="34,139,0,0" VerticalAlignment="Top" Width="241" Height="45" FontSize="16" Click="Button_Click"/>
     </Grid>
 </Window>
