--- a/VipeBus/RouteWindow.xaml
+++ b/VipeBus/RouteWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Маршруты следования" Height="830" Width="1280" MinHeight="600" MinWidth="900" WindowState="Maximized">
+        Title="Маршруты следования" MinHeight="600" MinWidth="900" WindowState="Maximized">
     <Grid>
         <Label Content="UrbanVibe" HorizontalAlignment="Left" Margin="31,-12,0,0" VerticalAlignment="Top" Width="237" FontSize="48" RenderTransformOrigin="0.5,0.5" Height="65">
             <Label.RenderTransform>
@@ -33,6 +33,6 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="Добавить маршрут" x:Name="NewRouteButton" HorizontalAlignment="Left" Margin="34,177,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="NewRouteButton_Click"/>
-        <Button  Content="Главная" HorizontalAlignment="Left" Margin="34,100,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Back_Click"/>
+        <Button  Content="Главная" HorizontalAlignment="Left" Margin="34,100,0,0" VerticalAlignment="Top" Width="241" Height="44" FontSize="16" Click="Button_Click"/>
     </Grid>
 </Window>
